--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,7 +3,7 @@
   margin: auto;
 }
 
-ul{
+nav ul{
   list-style: none;
   margin: 0;
   padding: 0;
@@ -16,8 +16,6 @@ header a{
 .header{
   position: absolute;
   width: 100%;
-  left: 0;
-  top: 0;
   z-index: 100;
 }
 
@@ -31,6 +29,8 @@ header a{
   width: 100%;
   padding: 1vw 8vw;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, .15);
+  left: 0;
+  top: 0;
 }
 
 .header .logo a{
@@ -136,37 +136,85 @@ header a{
   display: block;
   padding: 10px 20px;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 500;
   color: #1c366d;
   transition: all .3s ease;
 }
 
-.header .open-nav-menu{
-  height: 34px;
-  width: 40px;
-  align-items: center;
-  justify-content: center;
+.hamburger-toggler{
+  position: relative;
+  background-color: transparent;
+  border: none;
+  outline: none;
   cursor: pointer;
   display: none;
 }
 
-.header .open-nav-menu span{
+.hamburger-toggler .hamburger-icon{
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hamburger-icon span{
   display: block;
-  width: 24px;
+  width: 30px;
   height: 3px;
-  margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: 0.3s ease-in-out;
   position: relative;
-  background-color: #1c366d;
-}
-
-.header .open-nav-menu .bar2{
   background-color: #dc1617;
+  transition: background-color 0.35s 0s ease-out;
 }
 
-.header .open-nav-menu .bar3{
-  background-color: #fbc504;
+.hamburger-icon span::before,
+.hamburger-icon span::after{
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 3px;
+  transition: top 0.2s 0.4s ease-out,
+              left 0.2s 0.2s ease-out,
+              right 0.2s 0.2s ease-out,
+              width 0.2s 0.2s ease-out,
+              transform 0.2s ease-out;
+}
+
+.hamburger-icon span::before{
+  top: 10px;
+  left: 15px;
+  background: #fbc504;
+} 
+
+.hamburger-icon span::after{
+  top: -10px;
+  right: 15px;
+  background: #1c366d;
+}
+
+.hamburger-toggler.active .hamburger-icon span{
+  background-color: transparent;
+}
+
+.hamburger-toggler.active .hamburger-icon span::before,
+.hamburger-toggler.active .hamburger-icon span::after{
+  top: 0;
+  width: 30px;
+  transition: top 0.2s ease-out,
+              left 0.2s 0.2s ease-out,
+              right 0.2s 0.2s ease-out,
+              width 0.2s 0.2s ease-out,
+              transform 0.2s 0.4s ease-out;
+}
+
+.hamburger-toggler.active .hamburger-icon span::before{
+  left: 0;
+  transform: rotate3d(0, 0, 1, 45deg);
+}
+
+.hamburger-toggler.active .hamburger-icon span::after{
+  right: 0;
+  transform: rotate3d(0, 0, 1, -45deg);
 }
 
 @media (max-width: 768px){
@@ -192,10 +240,6 @@ header a{
     bottom: 0;
   }
   
-  .header .open-nav-menu{
-    display: block;
-  }
-  
   .header .menu > .menu-item{
     display: block;
     margin: 0;
@@ -210,12 +254,8 @@ header a{
   
   .header .menu > .menu-item > a{
     padding: 12px 15px;
-    border-bottom: 1px solid rgba(0, 0, 0, .15);
+    /*border-bottom: 1px solid rgba(0, 0, 0, .15);*/
     background-color: #fbfbfa;
-  }
-  
-  .header .menu > .menu-item:first-child > a{
-    border-top: 1px solid #1c366d;
   }
   
   .header .menu > .menu-item-has-children:hover > a .plus:after{
@@ -224,18 +264,6 @@ header a{
   
   .header .menu > .menu-item-has-children.active > a .plus:after{
     transform: translate(-50%, -50%) rotate(0deg);
-  }
-  
-  .open-nav-menu.active .bar2:nth-child(2){
-    opacity: 0;
-  }
-  
-  .open-nav-menu.active .bar1:nth-child(1){
-    transform: translateY(8px) rotate(45deg);
-  }
-  
-  .open-nav-menu.active .bar3:nth-child(3){
-    transform: translateY(-8px) rotate(-45deg);
   }
   
   .header .menu > .menu-item > .sub-menu{
@@ -255,6 +283,10 @@ header a{
   
   .header .menu > .menu-item > .sub-menu > .menu-item > a{
     padding: 12px 45px;
-    border-bottom: 1px solid rgba(0, 0, 0, .2);
+    /*border-bottom: 1px solid rgba(0, 0, 0, .2);*/
+  }
+  
+  .hamburger-toggler{
+    display: block;
   }
 }
