--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,7 @@
 
 #materi .row .card{
   width: 100%;
+  height:100%;
   background: #fbfbfa;
   border: 1px solid #1c366d;
   margin-bottom: 50px;
@@ -84,11 +85,14 @@
   font-size: 18px;
 }
 
+#materi .row .card .cardBody p{
+  margin-bottom: 100px;
+}
+
 .cardBody .btn{
   color: #fbfbfa;
   text-align: center;
   background: #1c366d;
-  margin-top: 30px;
   text-decoration: none;
   padding: 10px 5px;
   border: none;
@@ -247,6 +251,10 @@
   #pengertian .penjelasan p,
   #profession .bidang ol li p{
     font-size: 14px;
+  }
+  
+  #materi .row .card .cardBody p{
+    margin-bottom: 20px;
   }
   
   #materi .row .card .cardHeader{
