--- a/css/galeri.css
+++ b/css/galeri.css
@@ -14,6 +14,7 @@
 .gallery .image{
   padding: 7px;
   width: calc(100% / 3);
+  overflow: hidden;
 }
 
 .gallery .image img{
@@ -70,12 +71,6 @@
 .details .title p.current-img{
   font-weight: 500;
 }
-/*
-.details .icon{
-  color: #1c366d;
-  font-size: 20px;
-  cursor: pointer;
-}*/
 
 .close{
   position: relative;
